--- a/Cooperation.Rmd
+++ b/Cooperation.Rmd
@@ -2,7 +2,10 @@
 title: "Cooperation in innovation"
 author: "luismor"
 date: "3/25/2021"
-output: html_document
+output:
+  word_document: default
+  html_document: default
+  pdf_document: default
 ---
 
 ## 
@@ -78,7 +81,7 @@ df$facTiempR <- factor(df$TIEMPO,
                                "1", "1", "1", "1"))
 ```
 
-#Chi cuadrado - Pearson para la primera hipótesis
+### Chi cuadrado - Pearson para la primera hipótesis
 
 H1: Companies change their perspective on cooperation to develop innovation according to the economic cycle.
 
@@ -111,7 +114,7 @@ mosaicplot(tablaCoop, ylab="Economy Cycle", xlab = "Cooperation",
            shade = T)
 ```
 
-#Chi cuadrado - Pearson para la segunda hipótesis
+### Chi cuadrado - Pearson para la segunda hipótesis
 H2: Companies change their views on the competitive need for innovation depending on the economic cycle.
 
 ```{r}
@@ -162,8 +165,8 @@ Cálculo de medias
 Representación gráfica
 
 ```{r}
-par(mfrow = c(1,3))
-  mosaicplot(DOI_1, ylab="Economy Cycle", xlab = "Likert scale",
+par(mfrow = c(3,3))
+   mosaicplot(DOI_1, ylab="Economy Cycle", xlab = "Likert scale",
                shade = T)
     
     mosaicplot(DOI_2, ylab="Economy Cycle", xlab = "Likert scale",
@@ -191,57 +194,104 @@ par(mfrow = c(1,3))
                shade = T)
 ```
 
-#Chi cuadrado - Pearson para la tercera hipótesis
+### Chi cuadrado - Pearson para la tercera hipótesis
 H3: Companies change their views on the problems and barriers to entry for developing innovation according to the economic cycle.
 
 Mismo proceso que anterior.
 
-#Mann-Withney para la cuarta hipótesis
+## U de Mann-Whitney
+
+### Mann-Whitney para la cuarta hipótesis
 H4: The firms' perspective on the competitive importance of innovation and the possible problems for the development of innovation conditions their response on whether or not to cooperate with technology centres.
 
+```{r, messages = F}
+library(survival)
+library(coin)
+```
+
+P-valores de ManW
+
 ```{r}
+wilcox.test(GIO1~COOP,data=df, Paired = TRUE, exact = FALSE)
+wilcox.test(GIO2~COOP,data=df, Paired = TRUE, exact = FALSE)
+wilcox.test(GIO3~COOP,data=df, Paired = TRUE, exact = FALSE)
+
+#Replicar para todas las posiblidades
+```
+
+Valores Z de ManW
+
+```{r}
+df$COOP <- as.factor(df$COOP)
+df.gr$COOP <- as.factor(df.gr$COOP)
+df.cr$COOP <- as.factor(df.cr$COOP)
+df.re$COOP <- as.factor(df.re$COOP)
+
+wilcox_test(df$GIO1 ~ df$COOP)
+wilcox_test(df$GIO2 ~ df$COOP)
+wilcox_test(df$GIO2 ~ df$COOP)
+
+#La función wilcox_test necesita que se le indique una variable como factor.
+#Repetir para todas las posibilidades
 
 ```
 
+Cálculo de medias (para las que cooperan y para las que no)
 
-    
-    
-    
-    par(mfrow = c(1,3))
-    mosaicplot(DOI_4, ylab="Economy Cycle", xlab = "Likert scale",
-               shade = T)
-    
-    mosaicplot(DOI_5, ylab="Economy Cycle", xlab = "Likert scale",
-               shade = T)
-    
-    mosaicplot(DOI_6, ylab="Economy Cycle", xlab = "Likert scale",
-               shade = T)
-    
+```{r}
+df.0 <- filter(df, COOP == "0")
+df.1 <- filter(df, COOP == "1")
 
-mean(df$COOP)
-
-df.1 <- filter(df, COOP == 1)
-df.0 <- filter(df, COOP == 0)
-
-df.gr <- filter(df, TIEMPO <= 2007)
-    mean(df.gr$COOP)
-
-df.cr <- filter(df, TIEMPO %in% c(2008, 2009, 2010))
-    mean(df.cr$COOP)
-    
-df.re <- filter(df, TIEMPO >=  2011)
-    mean(df.re$COOP)
-
-df <- na.omit(df)
-    
 mean(df.0$GIO1)
-mean(df.0$GIO2)
-mean(df.0$GIO3)
-mean(df.0$GIO4)
-mean(df.0$GIO5)
-mean(df.0$GIO6)
-mean(df.0$GIO7)
-mean(df.0$GIO8)
-mean(df.0$GIO9)
+mean(df.1$GIO1)
 
+df.gr.0 <- filter(df.gr, COOP == "0")
+df.gr.1 <- filter(df.gr, COOP == "1")
 
+mean(df.gr.0$GIO1)
+mean(df.gr.1$GIO1)
+
+#Replicar para todos los valores necesarios
+```
+
+Representación gráfica
+
+```{r}
+par(mfrow = c(3,3))
+
+DOI_1 <-table(df$GIO1, df$COOP)
+mosaicplot(DOI_1, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_2 <-table(df$GIO2, df$COOP)
+mosaicplot(DOI_2, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_3 <-table(df$GIO3, df$COOP)
+mosaicplot(DOI_3, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_4 <-table(df$GIO1, df$COOP)
+mosaicplot(DOI_1, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_5 <-table(df$GIO2, df$COOP)
+mosaicplot(DOI_2, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_6 <-table(df$GIO3, df$COOP)
+mosaicplot(DOI_3, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_7 <-table(df$GIO1, df$COOP)
+mosaicplot(DOI_1, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_8 <-table(df$GIO2, df$COOP)
+mosaicplot(DOI_2, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+
+DOI_9 <-table(df$GIO3, df$COOP)
+mosaicplot(DOI_3, ylab="Cooperation", xlab = "Likert scale",
+           shade = T)
+```
